grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.use_declaration,
        $.mod_declaration,
        $.function_definition,
        $.struct_declaration,
        $.enum_declaration,
        $.ability_declaration,
        $.const_declaration,
      ),

    // mod foo
    // mod Foo
    // mod foo { ... }
    // pub mod foo
    _outer_path_keyword: ($) => choice($.keyword_pkg, $.keyword_super),

    // struct User { name: String, age: Nat }
    // struct Box(a) { value: a }
    // pub struct Point { x: Int, y: Int }
    type_parameters: ($) =>
      seq(
        "(",
        $.identifier,
        repeat(seq(",", $.identifier)),
        optional(","),
        ")",
      ),

    _field_separator: ($) => choice(",", $._newline),

    _type: ($) =>
      choice(
        $.type_path,
        $.type_variable,
        $.generic_type,
        $.function_type,
        $.tuple_type,
      ),

    // Tuple type: #(Int, String), #(a, b, c)
    type_variable: ($) => $.identifier,

    // Generic type like List(a) or Option(String)
    generic_type: ($) =>
      prec(
        1,
        seq(
          $.type_path,
          "(",
          $._type,
          repeat(seq(",", $._type)),
          optional(","),
          ")",
        ),
      ),

    // Type names start with uppercase: User, String, List
    // Using RustRegex for future Unicode extensibility
    type_identifier: ($) => re`[A-Z][a-zA-Z0-9_]*`,

    // enum Option(a) { None, Some(a) }
    // enum Result(a, e) { Ok { value: a }, Err { error: e } }
    // pub enum Status { Active, Inactive }
    ability_declaration: ($) =>
      seq(
        optional($.visibility_marker),
        $.keyword_ability,
        field("name", $.type_identifier),
        optional(field("type_params", $.type_parameters)),
        field("body", $.ability_body),
      ),

    ability_body: ($) => seq("{", repeat($.ability_operation), "}"),

    // fn print(msg: String) -> Nil   (tail-resumptive)
    // op get() -> s                   (general, explicit resume)
    ability_operation: ($) =>
      seq(
        field("kind", choice($.keyword_fn, $.keyword_op)),
        field("name", $.identifier),
        "(",
        optional($.typed_parameter_list),
        ")",
        "->",
        field("return_type", $._type),
      ),

    // (msg: String, value: Int)
    typed_parameter_list: ($) =>
      seq(
        $.typed_parameter,
        repeat(seq(",", $.typed_parameter)),
        optional(","),
      ),

    typed_parameter: ($) =>
      seq(field("name", $.identifier), ":", field("type", $._type)),

    // const MAX_SIZE = 1000
    // const PI: Float = 3.14159
    // pub const VERSION = "0.1.0"
    function_definition: ($) =>
      choice($.extern_function, $.regular_function),

    // extern fn: no body allowed
    regular_function: ($) =>
      seq(
        optional($.visibility_marker),
        ...functionSignature($),
        field("body", $.block),
      ),

    // extern or extern "abi"
    return_type_annotation: ($) =>
      seq("->", optional(field("abilities", $.ability_row)), $._type),

    // Parameter with optional type annotation: x or x: Int
    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
      ),

    // Parameter list (requires at least one, can mix typed/untyped)
    parameter_list: ($) =>
      seq($.parameter, repeat(seq(",", $.parameter)), optional(",")),

    block: ($) =>
      seq("{", repeat(choice($.let_statement, $.expression_statement)), "}"),

    let_statement: ($) =>
      seq(
        $.keyword_let,
        field("pattern", $.pattern),
        "=",
        field("value", $._expression),
      ),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.lambda_expression,
        $.constructor_expression,
        $.call_expression,
        $.resume_expression,
        $.method_call_expression,
        $.case_expression,
        $.handle_expression,
        $.record_expression,
        $.primary_expression,
      ),

    // resume value — only valid inside op handler arms
    binary_expression: ($) => {
      const binop = (precedence, op) =>
        prec.left(
          precedence,
          seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ),
        );
      return choice(
        // Precedence (higher number = binds tighter)
        // 5: * / %
        binop(5, "*"),
        binop(5, "/"),
        binop(5, "%"),
        // 4: + - <>
        binop(4, "+"),
        binop(4, "-"),
        binop(4, "<>"),
        // 3: == != < > <= >=
        binop(3, "=="),
        binop(3, "!="),
        binop(3, "<"),
        binop(3, ">"),
        binop(3, "<="),
        binop(3, ">="),
        // 2: &&
        binop(2, "&&"),
        // 1: ||
        binop(1, "||"),
        // Qualified operators: a Int::+ b, xs List::<> ys
        binop(5, $.qualified_operator),
      );
    },

    call_expression: ($) =>
      prec(
        10,
        seq(
          field("function", $.value_path),
          "(",
          optional($.argument_list),
          ")",
        ),
      ),

    method_call_expression: ($) =>
      choice(
        // With arguments - higher priority to prefer this over no-args form
        prec.left(
          11,
          seq(
            field("receiver", $._expression),
            ".",
            field("method", $.value_path),
            "(",
            optional($.argument_list),
            ")",
          ),
        ),
        // Without arguments (getter style)
        prec.left(
          10,
          seq(
            field("receiver", $._expression),
            ".",
            field("method", $.value_path),
          ),
        ),
      ),

    handle_expression: ($) =>
      seq(
        $.keyword_handle,
        field("expr", $._expression),
        "{",
        optional(
          seq(
            $.handler_arm,
            repeat(seq($._field_separator, $.handler_arm)),
            optional($._field_separator),
          ),
        ),
        "}",
      ),

    // Handler arm: do x { body }, fn Op(args) { body }, op Op(args) { body }
    handler_arm: ($) =>
      choice(
        $.completion_handler,
        $.fn_handler,
        $.op_handler,
      ),

    // do result { body }
    completion_handler: ($) =>
      seq(
        $.keyword_do,
        field("binding", $.identifier),
        field("body", $.block),
      ),

    // fn Console::print(msg) { body }
    pattern: ($) => choice($.simple_pattern, $.as_pattern),

    // Simple patterns (can be used in as_pattern without recursion)
    simple_pattern: ($) =>
      choice(
        $.literal_pattern,
        $.wildcard_pattern,
        $.constructor_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.identifier_pattern,
      ),

    identifier_pattern: ($) => $.identifier,

    // List pattern: [], [a, b, c], [head, ..tail], [first, ..]
    argument_list: ($) => seq($._expression, repeat(seq(",", $._expression))),

    primary_expression: ($) =>
      choice(
        $.keyword_true,
        $.keyword_false,
        $.keyword_nil,
        $.number_literal,
        $.string,
        $.raw_string,
        $.raw_interpolated_string,
        $.multiline_string,
        $.bytes_string,
        $.raw_bytes,
        $.raw_interpolated_bytes,
        $.multiline_bytes,
        $.rune,
        $.value_path,
        $.list_expression,
        $.tuple_expression,
        $.operator_fn,
        $.block, // { expr } for grouping
      ),

    // All binary operators
    lambda_expression: ($) =>
      prec.right(
        0,
        seq(
          $.keyword_fn,
          "(",
          optional(field("params", $.parameter_list)),
          ")",
          optional(field("return_type", $.return_type_annotation)),
          field("body", $._expression),
        ),
      ),

    // A path whose final segment names a value: print, std::io::print,
    // Int::to_string. Value references use this rule in every expression role.
    // Also supports: pkg::module, super::item, self::helper
    // Keywords (True, False, Nil) won't match because identifier is lowercase-only
    // Note: path_segment wraps identifier/type_identifier due to tree-sitter lexer limitations
    value_path: ($) =>
      choice(
        $.identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.identifier,
          ),
        ),
      ),

    // A path whose final segment is a type or constructor name.
    // Used where the syntactic role distinguishes constructors/types from
    // ordinary function paths: std::io::Error::EndOfFile, pkg::model::User.
    type_path: ($) =>
      choice(
        $.type_identifier,
        prec.right(
          11,
          seq(
            choice(alias($._name, $.path_segment), $.path_keyword),
            repeat(seq("::", alias($._name, $.path_segment))),
            "::",
            $.type_identifier,
          ),
        ),
      ),

    // [1, 2, 3]
    number_literal: ($) =>
      seq(
        token(
          choice(
            seq(optional(/[+-]/), choice(...NUMBER_MAGNITUDES)),
            re`[+-]?[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9_]*)?`,
          ),
        ),
        optional($.number_suffix),
      ),

    // Rune literal: ?a, ?\n, ?\t, ?\x41, ?\u{41}
    // Matches: ? followed by either:
    //   - A single printable character (not backslash or whitespace)
    //   - An escape sequence: \n, \r, \t, \0, \\, \xHH, \u{H...} (1-6 hex digits)
    identifier: ($) => re`[a-z_][a-zA-Z0-9_]*|r#[a-z_][a-zA-Z0-9_]*`,

    // Name can be either identifier or type_identifier (used in paths, modules)
    _name: ($) => choice($.identifier, $.type_identifier),

    // Keywords
    keyword_fn: ($) => token(prec(2, "fn")),
    keyword_op: ($) => token(prec(2, "op")),
    keyword_do: ($) => token(prec(2, "do")),
    keyword_let: ($) => "let",
    keyword_ability: ($) => "ability",
    keyword_pub: ($) => "pub",
    visibility_marker: ($) =>
      seq(
        $.keyword_pub,
        optional(seq("(", $._outer_path_keyword, ")")),
      ),
    keyword_handle: ($) => "handle",
